Dec 12, 2023
  removed dependency rgd-pipelines-1.0.5.jar

Nov 17, 2023
  upgraded to java 17

Jul 24, 2023
  rat: reduced nr of assemblies processed to rn7 and rat-cyto, to reduce possibility of removing transcript for older assemblies

May 22, 2023
  in '-all_genes' mode download all genes into date-stamped file

May 18, 2023
  added bonobo assembly NHGRI_mPanPan1-v1.1-0.1.freeze_pri

Apr 14, 2023
  updated build.gradle to be gradle 6.x + compatible

Oct 17, 2022
   more verbose naming of downloaded files in fullload mode

May 20, 2022
   aliases: strip prefix 'LOW QUALITY PROTEIN:' from incoming aliases
   added loading of human Alternate T2T-CHM13v2.0 assembly

Apr 28, 2022
   tuned up logging

Apr 22, 2022
   added loading of human assembly GRCh38.p14

Apr 07, 2022
   fixed loading of map positions for green monkey genes

Mar 09, 2022
   tuned up logging

Feb 11, 2022
   tuned up logging

Jan 31, 2022
   upgraded to commons-collections4

Jan 25, 2022
   cleanup: removed some test code

Jan 04, 2022
   updated log4j to avoid zero day exploit

Jun 21, 2021
   fixed code to properly process features

Jun 15, 2021
   updated scripts to better handle processed species list

Mar 26, 2021
   -added loading of new squirrel assembly HiC_ltri_2

Mar 11, 2021
   -added support for 5 new dog assemblies

Feb 25, 2021
  -restored removal of obsolete gene positions

Jan 26, 2021
  -added loading of mRatBN7.2 assembly

Jan 20, 2021
  -removed code to parse UniGene Ids (UniGene database discontinued at NCBI in 2019)

Nov 06, 2020
  -fixed conf to load map positions for molerat

Oct 13, 2020
  -updated config to load mouse assembly GRCm39

Sep 09, 2020
  -non-rat genes (applies to HUMAN and MOUSE): new genes are always loaded, regardless if sequences are present or not
     and MGI ID or HGNC ID is no longer required to load a new gene

Sep 08, 2020
  -tuned up code for transcript versions

Aug 26, 2020
  -updated code to use STABLE_TRANSCRIPTS from rgdcore

Aug 20, 2020