@@ -29,10 +29,10 @@ dependencies {
     }
     implementation 'commons-net:commons-net:3.9.0'
     implementation 'jaxen:jaxen:2.0.0'
-    implementation 'org.apache.logging.log4j:log4j-core:2.21.0'
+    implementation 'org.apache.logging.log4j:log4j-core:2.21.1'
     implementation 'org.apache.httpcomponents:httpclient:4.5.14'
-    implementation 'com.oracle.database.jdbc:ojdbc10:19.20.0.0'
-    implementation 'org.springframework:spring-jdbc:6.0.14'
+    implementation 'com.oracle.database.jdbc:ojdbc10:19.21.0.0'
+    implementation 'org.springframework:spring-jdbc:6.1.4'
     implementation 'com.io7m.xom:xom:1.2.10'
 
     implementation fileTree(dir: 'lib', include: '*.jar')
